[package]
edition = "2021"
name    = "joystick_no_std_2"
version = "0.1.0"

[[bin]]
name = "joystick_no_std_2"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
nb = "1.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
